--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -24,6 +24,7 @@ runtime-benchmarks = [
     'hex-literal',
     'pallet-balances/runtime-benchmarks',
     'pallet-template/runtime-benchmarks',
+    'pallet-poe/runtime-benchmarks',
     'pallet-timestamp/runtime-benchmarks',
     'sp-runtime/runtime-benchmarks',
 ]
@@ -39,6 +40,7 @@ std = [
     'pallet-randomness-collective-flip/std',
     'pallet-sudo/std',
     'pallet-template/std',
+    'pallet-poe/std',
     'pallet-timestamp/std',
     'pallet-transaction-payment-rpc-runtime-api/std',
     'pallet-transaction-payment/std',
@@ -135,6 +137,11 @@ version = '3.0.0'
 [dependencies.pallet-template]
 default-features = false
 path = '../pallets/template'
+version = '3.0.0'
+
+[dependencies.pallet-poe]
+default-features = false
+path = '../pallets/poe'
 version = '3.0.0'
 
 [dependencies.pallet-timestamp]
