--- a/pallets/kitties/Cargo.toml
+++ b/pallets/kitties/Cargo.toml
@@ -43,6 +43,13 @@ git = 'https://github.com/paritytech/substrate.git'
 tag = 'monthly-2021-07'
 version = '3.0.0'
 
+
+[dev-dependencies.pallet-randomness-collective-flip]
+default-features = false
+git = 'https://github.com/paritytech/substrate.git'
+tag = 'monthly-2021-07'
+version = '3.0.0'
+
 [features]
 default = ['std']
 runtime-benchmarks = ['frame-benchmarking']
@@ -107,6 +114,12 @@ tag = 'monthly-2021-07'
 version = '3.0.0'
 
 [dependencies.sp-core]
+default-features = false
+git = 'https://github.com/paritytech/substrate.git'
+tag = 'monthly-2021-07'
+version = '3.0.0'
+
+[dependencies.pallet-randomness-collective-flip]
 default-features = false
 git = 'https://github.com/paritytech/substrate.git'
 tag = 'monthly-2021-07'
